--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@react-navigation/native": "6.1.9",
     "@react-navigation/native-stack": "6.9.17",
     "@tamagui/animations-react-native": "^1.117.2",
+    "@tamagui/animations-reanimated": "^1.117.2",
     "@tamagui/config": "^1.117.2",
     "@tamagui/core": "^1.117.2",
     "@tamagui/font-inter": "^1.117.2",
