--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "expo-status-bar": "~2.0.0",
     "firebase": "^11.0.2",
     "lottie-react-native": "^7.1.0",
+    "lru-cache": "^7.18.3",
     "react": "18.3.1",
     "react-native": "0.76.3",
     "react-native-calendars": "^1.1307.0",
