--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-firebase/auth": "^21.6.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
@@ -55,7 +56,7 @@
     "date-fns": "^4.1.0",
     "expo": "~52.0.19",
     "expo-blur": "~14.0.1",
-    "expo-build-properties": "^0.13.1",
+    "expo-build-properties": "~0.13.1",
     "expo-camera": "~16.0.10",
     "expo-constants": "^17.0.3",
     "expo-dev-client": "~5.0.6",
