--- a/package.json
+++ b/package.json
@@ -32,11 +32,14 @@
     "@expo/vector-icons": "^14.0.4",
     "@google/generative-ai": "0.1.3",
     "@gorhom/bottom-sheet": "^5.0.6",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^2.1.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "^4.5.5",
+    "@react-native-firebase/app": "^21.6.1",
     "@react-native-firebase/auth": "^21.6.1",
+    "@react-native-firebase/firestore": "^21.6.1",
+    "@react-native-firebase/messaging": "^21.6.1",
     "@react-native-picker/picker": "2.9.0",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
@@ -58,7 +61,7 @@
     "expo-build-properties": "~0.13.1",
     "expo-camera": "^16.0.10",
     "expo-constants": "^17.0.3",
-    "expo-dev-client": "~5.0.6",
+    "expo-dev-client": "~5.0.8",
     "expo-file-system": "~18.0.6",
     "expo-font": "^13.0.1",
     "expo-linear-gradient": "~14.0.1",
@@ -69,7 +72,11 @@
     "expo-sharing": "^13.0.0",
     "expo-splash-screen": "^0.29.18",
     "expo-status-bar": "~2.0.0",
+    "expo-system-ui": "^4.0.6",
+    "expo-task-manager": "^12.0.3",
+    "express": "^4.21.2",
     "firebase": "^11.1.0",
+    "firebase-admin": "^13.0.2",
     "lottie-react-native": "^7.1.0",
     "lru-cache": "^7.18.3",
     "path-browserify": "^1.0.1",
@@ -77,6 +84,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-calendars": "^1.1307.0",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.47",
     "react-native-qrcode-svg": "^6.3.12",
@@ -87,7 +95,8 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3",
     "react-native-wheel-pick": "^1.2.2",
-    "tamagui": "^1.120.1"
+    "tamagui": "^1.120.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
@@ -98,7 +107,10 @@
     "@babel/plugin-transform-flow-strip-types": "^7.25.9",
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/runtime": "^7.26.0",
+    "@react-native-community/cli": "^15.1.3",
     "@tamagui/babel-plugin": "^1.120.1",
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.10.5",
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
@@ -108,7 +120,8 @@
     "metro-minify-terser": "^0.81.0",
     "react-native-dotenv": "^3.4.9",
     "sharp": "^0.33.5",
-    "typescript": "^5.3.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.2"
   },
   "expo": {
     "doctor": {
