--- a/package.json
+++ b/package.json
@@ -25,14 +25,22 @@
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "npx expo prebuild --clean",
+    "prebuild": "npx expo prebuild --clean",
+    "eas-build-pre-install": "npm run prebuild"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^10.0.0",
     "@expo/vector-icons": "^14.0.4",
     "@google/generative-ai": "^0.1.3",
     "@gorhom/bottom-sheet": "^5.0.6",
+    "@livekit/react-native": "^2.7.0",
+    "@livekit/react-native-expo-plugin": "^1.0.1",
+    "@livekit/react-native-webrtc": "^125.0.9",
     "@notifee/react-native": "^9.1.8",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/cli-platform-android": "^17.0.0",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-community/slider": "4.5.5",
@@ -61,12 +69,13 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "expo": "~52.0.36",
+    "expo-av": "^15.0.2",
     "expo-background-fetch": "~13.0.4",
     "expo-blur": "~14.0.1",
     "expo-build-properties": "^0.13.2",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
-    "expo-dev-client": "~5.0.14",
+    "expo-dev-client": "~5.0.19",
     "expo-file-system": "~18.0.6",
     "expo-font": "^13.0.1",
     "expo-linear-gradient": "~14.0.1",
@@ -81,17 +90,19 @@
     "expo-task-manager": "~12.0.4",
     "express": "^4.21.2",
     "firebase": "^11.4.0",
+    "livekit-client": "^2.9.9",
     "lottie-react-native": "7.1.0",
     "lru-cache": "^7.18.3",
     "lucide-react-native": "^0.475.0",
     "path-browserify": "^1.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-gifted-charts": "^1.4.47",
+    "react-native-incall-manager": "^4.2.0",
     "react-native-qrcode-svg": "^6.3.12",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
@@ -100,7 +111,9 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-vision-camera": "^4.6.3",
     "react-native-wheel-pick": "^1.2.2",
+    "resolve-from": "^5.0.0",
     "tamagui": "^1.120.1",
+    "tslib": "^2.8.1",
     "winston": "^3.17.0",
     "zustand": "^4.5.2"
   },
@@ -123,7 +136,6 @@
     "@types/lodash": "^4.17.14",
     "@types/node": "^22.10.5",
     "@types/react": "~18.3.12",
-    "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.0",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "babel-plugin-transform-remove-console": "^6.9.4",
