--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "jest",
     "prepare": "npx expo prebuild --clean",
     "prebuild": "npx expo prebuild --clean",
-    "eas-build-pre-install": "npm run prebuild"
+    "eas-build-pre-install": "npx expo doctor"
   },
   "dependencies": {
     "@config-plugins/react-native-webrtc": "^10.0.0",
