fix: add custom EAS hooks to manage prebuild and file permissions

--- a/eas.json
+++ b/eas.json
@@ -22,7 +22,9 @@
       },
       "env": {
         "EAS_SKIP_AUTO_FINGERPRINT": "1"
-      }
+      },
+      "prebuildCommand": "node ./eas-hooks/prebuild.js",
+      "postinstallCommand": "node ./eas-hooks/postinstall.js"
     },
     "preview": {
       "distribution": "internal",
@@ -32,7 +34,9 @@
       },
       "ios": {
         "image": "latest"
-      }
+      },
+      "prebuildCommand": "node ./eas-hooks/prebuild.js",
+      "postinstallCommand": "node ./eas-hooks/postinstall.js"
     },
     "production": {
       "android": {
@@ -41,7 +45,9 @@
       },
       "ios": {
         "image": "latest"
-      }
+      },
+      "prebuildCommand": "node ./eas-hooks/prebuild.js",
+      "postinstallCommand": "node ./eas-hooks/postinstall.js"
     }
   }
 }
