fix: add iOS Firebase configuration for EAS builds

--- a/app.json
+++ b/app.json
@@ -57,6 +57,10 @@
     "assetBundlePatterns": [
       "**/*"
     ],
+    "ios": {
+      "bundleIdentifier": "com.aifit.aifitness",
+      "googleServicesFile": "./GoogleService-Info.plist"
+    },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
