fix: use android-only prebuild command for development

--- a/eas.json
+++ b/eas.json
@@ -23,7 +23,7 @@
       "env": {
         "EAS_SKIP_AUTO_FINGERPRINT": "1"
       },
-      "prebuildCommand": "node ./eas-hooks/prebuild.js"
+      "prebuildCommand": "npx expo prebuild --platform android --clean"
     },
     "preview": {
       "distribution": "internal",
