fix: restore prebuild hook command for consistency

--- a/eas.json
+++ b/eas.json
@@ -22,7 +22,8 @@
       },
       "env": {
         "EAS_SKIP_AUTO_FINGERPRINT": "1"
-      }
+      },
+      "prebuildCommand": "node ./eas-hooks/prebuild.js"
     },
     "preview": {
       "distribution": "internal",
